# AI_OS

./: .gitignore  .gitmarkers  Package.resolved  Package.swift  README.md
Sources/AIOS/: ShellView.swift  VoiceInput.swift  main.swift
Sources/AIOSCore/: AppTool.swift  ChatMessage.swift  JSONValue.swift  LLMClient.swift  OllamaClient.swift  Tool.swift
Tests/AIOSCoreTests/: AgentCoreTests.swift  FileToolTests.swift  JSONValueTests.swift  LiveIntegrationTests.swift  OllamaClientTests.swift  ToolRegistryTests.swift
docs/superpowers/plans/: 2026-07-12-aios-linux.md  2026-07-12-aios-shell.md
docs/superpowers/specs/: 2026-07-12-aios-linux-design.md  2026-07-12-aios-shell-design.md
macos/: Package.swift
macos/Sources/AIOS/: AIOSApp.swift
macos/Sources/AIOSCore/: AgentCore.swift  FileTool.swift  ToolRegistry.swift
macos/Tests/AIOSCoreTests/: AgentCoreTests.swift  LiveIntegrationTests.swift
os/: README.md  provision.sh
os/daemon/: pyproject.toml
os/daemon/aios_daemon/: __main__.py  agent.py  config.py  ollama.py  server.py  tools.py
os/daemon/tests/: test_agent.py  test_config.py  test_live.py  test_ollama.py  test_server.py  test_tools.py
os/daemon/web/: app.js  index.html  style.css
os/units/: aios-daemon.service  aios-kiosk.service
